update blog setting and write EVA, NTM, DNC and NP

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -315,3 +315,12 @@ pre {
     padding-top: 5px;
   }
 }
+
+.mbtablestyle {
+        border-collapse: collapse;
+  margin: 20px auto;
+
+   > table, td, th {
+        border: 1px solid black;
+        }
+}
